tests/correctness/resources/miniboxing/tests/compile/gh-bug-162b.check
newSource1.scala:4: warning: The miniboxed class B extends the generic class A, which triggers a limitation of the miniboxing transformation: any value of type B cannot be used as a value of type A, despite the fact that members and implementations are correctly inherited. There is a simple workaround to this problem, which you can apply to your code. For more information, please see https://github.com/miniboxing/miniboxing-plugin/issues/162. Note that this can lead to further errors down the line. Also, keep in mind you should not expose this class in your API, as it may break client code:
class B[@miniboxed T](t: T) extends A {
      ^
newSource1.scala:13: warning: Miniboxing redirection error at miniboxing.tests.compile.bug162b.Test.main:
[Type error at:source-newSource1.scala,line-13,offset=255] type mismatch;
 found   : miniboxing.tests.compile.bug162b.B[Int]
 required: miniboxing.tests.compile.bug162b.A
Note: The resulting bytecode will be incorrect due to this error, so please don't use it in production and report the bug at https://github.com/miniboxing/miniboxing-plugin/issues.
    foo(b) // will fail :(
        ^